Fix template extension

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,4 @@ buildNumber.properties
 .idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij
-/streetCreds.env.txt
+/streetCreds.env
