--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     
 </project>
